force-app/main/default/objects/eComm_Customer_Profile__dll/eComm_Customer_Profile__dll.object-meta.xml
<CustomObject>
    <label>eComm Customer Profile</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>