force-app/main/default/objects/eComm_Customer_Profile__dll/fields/birth_date__c.field-meta.xml
<CustomField>
    <fullName>birth_date__c</fullName>
    <label>Birth Date</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>birth_date</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Date</type>
</CustomField>