force-app/main/default/objects/eComm_Customer_Profile__dll/fields/Contact_Point_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Point_Email_Id__c</fullName>
    <label>Contact Point Email Id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Contact_Point_Email_Id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>