force-app/main/default/objects/eComm_Customer_Profile__dll/fields/rewards_program_id__c.field-meta.xml
<CustomField>
    <fullName>rewards_program_id__c</fullName>
    <label>Rewards Program ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>rewards_program_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>